--- a/us/template/club-player.html
+++ b/us/template/club-player.html
@@ -63,7 +63,7 @@
                 </div>
                 
                 <div class="ms-3 col-lg-5 col-12">
-                    <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
+                    <a class="text-decoration-none text-dark" href="{% url 'player-home' i.id %}"><p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p></a>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
                     <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
@@ -104,7 +104,7 @@
                 </div>
                 
                 <div class="ms-3 col-lg-5 col-12">
-                    <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
+                    <a class="text-decoration-none text-dark" href="{% url 'player-home' i.id %}"><p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p></a>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
                     <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
@@ -149,7 +149,7 @@
                 </div>
                 
                 <div class="ms-3 col-lg-5 col-12">
-                    <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
+                    <a class="text-decoration-none text-dark" href="{% url 'player-home' i.id %}"><p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p></a>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
                     <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
@@ -194,7 +194,7 @@
                 </div>
                 
                 <div class="ms-3 col-lg-7 col-12">
-                    <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
+                    <a class="text-decoration-none text-dark" href="{% url 'player-home' i.id %}"><p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p></a>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
                     <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
@@ -243,7 +243,7 @@
                 </div>
                 
                 <div class="ms-3 col-lg-7 col-12">
-                    <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
+                    <a class="text-decoration-none text-dark" href="{% url 'player-home' i.id %}"><p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p></a>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
                     <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
@@ -288,7 +288,7 @@
                 </div>
                 
                 <div class="ms-3 col-lg-7 col-12">
-                    <p class="fs-2 fw-bold">{{i.first_name}} {{i.last_name}}</p>
+                    <a class="text-decoration-none text-dark" href="{% url 'player-home' i.id %}"><p class="fs-2 fw-bold">{{i.first_name}}{{i.last_name}}</p></a>
                     <p class=""><b>District: </b>{{i.district}} </p>
                     <p class=""><b>Locality </b>{{i.locality}}</p>
                     <p>Ability:{% with ability=i.player_ability %} {% for j in abilityRange %}
