--- a/us/template/ScoutClub.html
+++ b/us/template/ScoutClub.html
@@ -51,8 +51,9 @@
         </div>
     </nav>
     <div class="d-flex flex-column align-items-center justify-content-center">
-        
+        {% if interested_Clubs|length > 0 and i.scouted_by != firstname %}
         <h2 class="mt-5">Clubs shown interest</h2>
+        {% endif %}
         {% for i in interested_Clubs %}
         {% if i.scouted_by != fullname %}
         <script>console.log("{{ i.img }}")</script>
@@ -90,8 +91,9 @@
         {% endif %}
         {% endfor %}
         
-        
+        {% if not_interested_Clubs|length > 0 %}
         <h2 class="mt-5">Other Clubs</h2>
+        {% endif %}
         {% for i in not_interested_Clubs %}
         {% if i.scouted_by != fullname %}
         <script>console.log("{{ i.img }}")</script>
@@ -128,7 +130,9 @@
         </div>
         {% endif %}
         {% endfor %}
+        {% if interested_Clubs|length > 0 %}
         <h2 class="mt-5">Scouted clubs by interest</h2>
+        {% endif %}
         {% for i in interested_Clubs %}
         {% if i.scouted_by == fullname %}
         <script>console.log("{{ i.img }}")</script>
@@ -165,7 +169,9 @@
         </div>
         {% endif %}
         {% endfor %}
+        {% if not_interested_Clubs|length > 0 %}
         <h2 class="mt-5">Scouted By You</h2>
+        {% endif %}
         {% for i in not_interested_Clubs %}
         {% if i.scouted_by == fullname %}
         <script>console.log("{{ i.img }}")</script>
