--- a/us/template/ScoutPlayer.html
+++ b/us/template/ScoutPlayer.html
@@ -51,7 +51,9 @@
         </div>
     </nav>
     <div class="d-flex flex-column align-items-center justify-content-center">
+        {% if interested_players|length > 0 and i.scouted_by == fullname %}
         <h2 class="mt-5">Players shown interest</h2>
+        {% endif %}
         {% for i in interested_players %}
         {% if i.scouted_by != fullname %}
         <script>console.log("{{ i.img }}")</script>
@@ -95,8 +97,9 @@
         </div>
         {% endif %}
         {% endfor %}
-        
+        {% if not_interested_players|length > 0 and i.scouted_by != fullname %}
         <h2 class="mt-5">Other players</h2>
+        {% endif %}
         {% for i in not_interested_players %}
         {% if i.scouted_by != fullname %}
         <script>console.log("{{ i.img }}")</script>
@@ -142,7 +145,9 @@
         </div>
         {% endif %}
         {% endfor %}
+        {% if interested_players|length > 0 and i.scouted_by != fullname %}
         <h2 class="mt-5">Scouted players by interest</h2>
+        {% endif %}
         {% for i in interested_players %}
         {% if i.scouted_by == fullname %}
         <script>console.log("{{ i.img }}")</script>
@@ -188,7 +193,9 @@
         </div>
         {% endif %}
         {% endfor %}
+        {% if not_interested_players|length > 0 and i.scouted_by != fullname %}
         <h2 class="mt-5">Scouted by you</h2>
+        {% endif %}
         {% for i in not_interested_players %}
         {% if i.scouted_by == fullname %}
         <script>console.log("{{ i.img }}")</script>
