--- a/us/template/login.html
+++ b/us/template/login.html
@@ -45,6 +45,8 @@
         .gbutton:hover {
             transform: scale(1.02);
         }
+
+
     </style>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -73,7 +75,7 @@
                 {% if msg %}
                 <p class="m-3 text-danger">{{ msg }}</p>
                 {% endif %}
-                <p class="text-white">Don't have an accout? <a href="{% url 'register-player' %}">Sign-up</a></p>
+                <p class="text-white">Don't have an accout? <a href="{% url 'register-player' %}">Sign-up</p>
                 <a href="{% url 'social:begin' 'google-oauth2' %}" class="text-decoration-none"><button class="gbutton">
                         <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" viewBox="0 0 256 262">
                             <path fill="#4285F4"
