--- a/us/template/register.html
+++ b/us/template/register.html
@@ -19,6 +19,40 @@
             width: 100%;
 
         }
+
+        /* Signup link */
+
+        .signup-link {
+            align-items: center;
+            background-color: transparent;
+            color: #fff;
+            cursor: pointer;
+            display: flex;
+            font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+            font-size: 1rem;
+            font-weight: 700;
+            line-height: 1.5;
+            text-decoration: none;
+            text-transform: uppercase;
+            outline: 0;
+            border: 0;
+            /* padding: 1rem; */
+        }
+
+        .signup-link:before {
+            background-color: #fff;
+            content: "";
+            display: inline-block;
+            height: 1px;
+            margin-right: 10px;
+            transition: all .42s cubic-bezier(.25, .8, .25, 1);
+            width: 0;
+        }
+
+        .signup-link:hover:before {
+            background-color: #fff;
+            width: 3rem;
+        }
     </style>
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
@@ -40,7 +74,7 @@
                             <li class="nav-link text-white"><i class="bi bi-shield-fill"></i> Register Club</li>
                         </a></div>
                 </div>
-                <p class="h3 text-light">Registration</p>
+                <p class="h3 text-light">Player Registration</p>
                 <form class="d-flex flex-column w-100" enctype="multipart/form-data" action="" method="POST">
 
                     {% csrf_token %}
@@ -89,7 +123,11 @@
                 {% if msg %}
                 <p class="m-3 text-danger">{{ msg }}</p>
                 {% endif %}
-                <p class="text-white">Already have an account? <a href="{% url 'login' %}">Log-in</a></p>
+                <div class="d-flex">
+                    <p class="text-white">Already have an accout? </p>
+                    <a class="text-decoration-none" href="{% url 'login' %}"><button
+                        class="signup-link">Login</button></a>
+                </div>
                 <p id="error"></p>
             </div>
         </div>
