--- a/us/template/login.html
+++ b/us/template/login.html
@@ -46,7 +46,39 @@
             transform: scale(1.02);
         }
 
+        /* Signup link */
 
+        .signup-link {
+            align-items: center;
+            background-color: transparent;
+            color: #fff;
+            cursor: pointer;
+            display: flex;
+            font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+            font-size: 1rem;
+            font-weight: 700;
+            line-height: 1.5;
+            text-decoration: none;
+            text-transform: uppercase;
+            outline: 0;
+            border: 0;
+            /* padding: 1rem; */
+        }
+
+        .signup-link:before {
+            background-color: #fff;
+            content: "";
+            display: inline-block;
+            height: 1px;
+            margin-right: 10px;
+            transition: all .42s cubic-bezier(.25, .8, .25, 1);
+            width: 0;
+        }
+
+        .signup-link:hover:before {
+            background-color: #fff;
+            width: 3rem;
+        }
     </style>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -69,13 +101,17 @@
                     {{ form.as_table }}
                     <div class="d-flex justify-content-center">
 
-                        <button type="submit" class="btn btn-outline-primary text-light p-2 w-50 mt-3">Sign-up</button>
+                        <button type="submit" class="btn btn-outline-primary text-light p-2 w-50 mt-3">Log-in</button>
                     </div>
                 </form>
                 {% if msg %}
                 <p class="m-3 text-danger">{{ msg }}</p>
                 {% endif %}
-                <p class="text-white">Don't have an accout? <a href="{% url 'register-player' %}">Sign-up</p>
+                <div class="d-flex">
+                    <p class="text-white">Don't have an accout? </p>
+                    <a class="text-decoration-none" href="{% url 'register-player' %}"><button
+                        class="signup-link">Sign-up</button></a>
+                </div>
                 <a href="{% url 'social:begin' 'google-oauth2' %}" class="text-decoration-none"><button class="gbutton">
                         <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" viewBox="0 0 256 262">
                             <path fill="#4285F4"
