--- a/us/template/reg-club.html
+++ b/us/template/reg-club.html
@@ -20,6 +20,40 @@
             
         }
         
+
+        /* Signup link */
+
+        .signup-link {
+            align-items: center;
+            background-color: transparent;
+            color: #fff;
+            cursor: pointer;
+            display: flex;
+            font-family: ui-sans-serif, system-ui, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+            font-size: 1rem;
+            font-weight: 700;
+            line-height: 1.5;
+            text-decoration: none;
+            text-transform: uppercase;
+            outline: 0;
+            border: 0;
+            /* padding: 1rem; */
+        }
+
+        .signup-link:before {
+            background-color: #fff;
+            content: "";
+            display: inline-block;
+            height: 1px;
+            margin-right: 10px;
+            transition: all .42s cubic-bezier(.25, .8, .25, 1);
+            width: 0;
+        }
+
+        .signup-link:hover:before {
+            background-color: #fff;
+            width: 3rem;
+        }
     </style>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -38,7 +72,7 @@
                 <div class="d-flex justify-content-end w-100 text-light">
                     <div class=""><a class="text-decoration-none text-white" href="{% url 'register-player' %}"><li class="nav-link text-white"><i class="bi bi-person-fill"></i> Register Player</li></a></div>
                 </div>
-                <p class="h3 text-light">Registration</p>
+                <p class="h3 text-light">Club Registration</p>
                 <form class="d-flex flex-column w-100" enctype="multipart/form-data" action="" method="POST">
                     {% csrf_token %}
     <div class="form-group">
@@ -84,7 +118,11 @@
                 {% if msg %}
                 <p class="m-3 text-danger">{{ msg }}</p>
                 {% endif %}
-                <p class="text-white">Already have an account? <a href="{% url 'login' %}">Log-in</a></p>
+                <div class="d-flex">
+                    <p class="text-white">Already have an accout? </p>
+                    <a class="text-decoration-none" href="{% url 'login' %}"><button
+                        class="signup-link">Login</button></a>
+                </div>
             </div>
         </div>
     </div>
