datetime included in feeds

--- a/us/template/ScoutHome.html
+++ b/us/template/ScoutHome.html
@@ -84,11 +84,11 @@
                 <div class="feed-img">
                     <img class="w-100 rounded-circle" src={{scout.img.url}} alt="">
                 </div>
-                <div class="ms-2">
+                <div class="ms-2 d-flex">
                     <p class="fw-bold">
                         {{scout.first_name}} {{scout.last_name}}
                     </p>
-
+                    <p class="ms-2 text-secondary">{{i.datetime}}</p>
                 </div>
             </div>
             <div class="w-100 mt-3">
