--- a/us/template/player-home.html
+++ b/us/template/player-home.html
@@ -142,11 +142,11 @@
                     <div class="feed-img">
                         <img class="w-100 rounded-circle" src={{i.img.url}} alt="">
                     </div>
-                    <div class="ms-2">
+                    <div class="ms-2 d-flex">
                         <p class="fw-bold">
                             {{i.first_name}} {{i.last_name}}
                         </p>
-
+                        <p class="ms-2 text-secondary">{{j.datetime}}</p>
                     </div>
                 </div>
                 <div class="w-100 mt-3">
